[1] Pre-processing Files/UPB/GpMessages/17932343257800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Thursday, 21 March 2024 6:21:29 pm</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    .count()
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Thursday, 21 March 2024 6:21:29 pm (Elapsed Time: 0.34 seconds)</msg></messages>